test/visibility/only/checkUsePathBadFunctionAccess.good
checkUsePathBadFunctionAccess.chpl:3: error: unresolved call 'f2()'
